tests/snapshots/dbc-cantools/long_names.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - NN123456789012345678901234567890
  - N12345678901234567890123456_0000
  - N1234567890123456789012345678901
  - N12345678901234567890123456_0001
messages:
  - id:
      Standard: 9
    name: SS123456789012345678901234587890
    size: 8
    transmitter: ~
  - id:
      Standard: 8
    name: SS1234567890123456789012345_0000
    size: 8
    transmitter: ~
  - id:
      Standard: 7
    name: SS1234567890123456789012345_0001
    size: 8
    transmitter: ~
  - id:
      Standard: 6
    name: SS123456789012345678901234577890
    size: 8
    transmitter: ~
  - id:
      Standard: 5
    name: SS123456789012345678901234567890
    size: 8
    transmitter: ~
  - id:
      Standard: 4
    name: S1234567890123456789012345678901
    size: 8
    transmitter: ~
    signals:
      - name: SS123456789012345678901234567890
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 0
    name: M12345678901234567890123456_0000
    size: 8
    transmitter: ~
    signals:
      - name: SSS12345678901234567890123456789
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 1
    name: M1234567890123456789012345678901
    size: 8
    transmitter: N1234567890123456789012345678901
    signals:
      - name: SS1234567890123456789012345_0000
        multiplexer_indicator: Plain
        start_bit: 32
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: SS1234567890123456789012345_0001
        multiplexer_indicator: Plain
        start_bit: 24
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: SS1234567890123456789012345_0002
        multiplexer_indicator: Plain
        start_bit: 16
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - N12345678901234567890123456_0000
      - name: S12345678901234567890123456_0000
        multiplexer_indicator: Plain
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S1234567890123456789012345678901
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 2
    name: M12345678901234567890123456_0001
    size: 8
    transmitter: N12345678901234567890123456_0001
    signals:
      - name: SS1234567890123456789012345_0003
        multiplexer_indicator: Plain
        start_bit: 24
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: SS1234567890123456789012345_0004
        multiplexer_indicator: Plain
        start_bit: 16
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S12345678901234567890123456_0001
        multiplexer_indicator: Plain
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S12345678901234567890123456_0002
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 3
    name: MM123456789012345678901234567890
    size: 8
    transmitter: ~
    signals:
      - name: SSS123456789012345678901234_0000
        multiplexer_indicator: Plain
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: SS1234567890123456789012345_0005
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
environment_variables:
  - name: E12345678901234567890123456_0000
    typ: Integer
    min: 0
    max: 0
    unit: ""
    initial_value: 0
    ev_id: 1
    access_type: DummyNodeVector0
  - name: E1234567890123456789012345678901
    typ: Integer
    min: 0
    max: 0
    unit: ""
    initial_value: 0
    ev_id: 2
    access_type: DummyNodeVector0
attribute_definitions:
  - Plain:
      - BusType
      - String
  - Signal:
      - SystemSignalLongSymbol
      - String
  - Message:
      - SystemMessageLongSymbol
      - String
  - Node:
      - SystemNodeLongSymbol
      - String
  - EnvironmentVariable:
      - SystemEnvVarLongSymbol
      - String
attribute_defaults:
  - name: BusType
    value:
      String: ""
  - name: SystemSignalLongSymbol
    value:
      String: ""
  - name: SystemMessageLongSymbol
    value:
      String: ""
  - name: SystemNodeLongSymbol
    value:
      String: ""
  - name: SystemEnvVarLongSymbol
    value:
      String: ""
attribute_values_node:
  - name: SystemNodeLongSymbol
    node_name: NN123456789012345678901234567890
    value:
      String: NN123456789012345678901234567890123
  - name: SystemNodeLongSymbol
    node_name: N12345678901234567890123456_0000
    value:
      String: N123456789012345678901234567890123
  - name: SystemNodeLongSymbol
    node_name: N12345678901234567890123456_0001
    value:
      String: N12345678901234567890123456789012
attribute_values_message:
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 9
    value:
      String: SS12345678901234567890123458789012345
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 8
    value:
      String: SS1234567890123456789012345778901
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 7
    value:
      String: SS1234567890123456789012345878901234
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 5
    value:
      String: SS12345678901234567890123456789012
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 4
    value:
      String: S12345678901234567890123456789012
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 0
    value:
      String: M123456789012345678901234567890123
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 2
    value:
      String: M12345678901234567890123456789012
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 3
    value:
      String: MM12345678901234567890123456789012
attribute_values_signal:
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 4
    signal_name: SS123456789012345678901234567890
    value:
      String: SS12345678901234567890123456789012
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 0
    signal_name: SSS12345678901234567890123456789
    value:
      String: SSS12345678901234567890123456789012
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 1
    signal_name: SS1234567890123456789012345_0000
    value:
      String: SS12345678901234567890123456789012332
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 1
    signal_name: SS1234567890123456789012345_0001
    value:
      String: SS1234567890123456789012345678901233
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 1
    signal_name: SS1234567890123456789012345_0002
    value:
      String: SS12345678901234567890123456789012
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 1
    signal_name: S12345678901234567890123456_0000
    value:
      String: S123456789012345678901234567890123
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 2
    signal_name: SS1234567890123456789012345_0003
    value:
      String: SS12345678901234567890123456789012dw
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 2
    signal_name: SS1234567890123456789012345_0004
    value:
      String: SS12345678901234567890123456789012
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 2
    signal_name: S12345678901234567890123456_0001
    value:
      String: S12345678901234567890123456789012
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 2
    signal_name: S12345678901234567890123456_0002
    value:
      String: S123456789012345678901234567890123
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 3
    signal_name: SSS123456789012345678901234_0000
    value:
      String: SSS12345678901234567890123456789012
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 3
    signal_name: SS1234567890123456789012345_0005
    value:
      String: SS1234567890123456789012345678901233
attribute_values_env:
  - name: SystemEnvVarLongSymbol
    variable_name: E12345678901234567890123456_0000
    value:
      String: E12345678901234567890123456789012
signal_groups:
  - message_id:
      Standard: 3
    name: SS1234_sg
    repetitions: 1
    signal_names:
      - SS1234567890123456789012345_0005
      - SSS123456789012345678901234_0000
