tests/snapshots/dbc-cantools/long_names_multiple_relations_dumped.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - Sender_2_aaaaaaaaaaaaaaaaaaaaaaa
  - Receiver_2_zzzzzzzzzzzzzzzzzzzzz
  - Receiver_1
  - Node_6789_123456789_123456789_12
value_tables:
  - name: Value_Table_short
    descriptions:
      - id: 1
        description: "Very long, long, long description for the value '0x1'"
      - id: 0
        description: "Very long, long, long description for the value '0x0'"
  - name: Value_Table_cdefghi_ABCDEFGHI_AB
    descriptions:
      - id: 3
        description: "Description for the value '0x3'"
      - id: 2
        description: "Description for the value '0x2'"
      - id: 1
        description: "Description for the value '0x1'"
      - id: 0
        description: "Description for the value '0x0'"
messages:
  - id:
      Standard: 85
    name: Msg_Long_Name_56789_123456789_12
    size: 8
    transmitter: ~
    signals:
      - name: rx_twice_short
        multiplexer_indicator: Plain
        start_bit: 16
        size: 18
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: rx_twice_11111111111111111111111
        multiplexer_indicator: Plain
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Sig_used_twice_efgh_abcdefghi_ab
        multiplexer_indicator: Plain
        start_bit: 0
        size: 6
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 6
    name: TX_twice
    size: 2
    transmitter: Node_6789_123456789_123456789_12
    signals:
      - name: rx_twice_long_yyyyyyyyyyyyyyyyyy
        multiplexer_indicator: Plain
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - Receiver_1
          - Receiver_2_zzzzzzzzzzzzzzzzzzzzz
      - name: rx_twice_short
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - Receiver_2_zzzzzzzzzzzzzzzzzzzzz
          - Receiver_1
  - id:
      Standard: 5
    name: RX_TX_1
    size: 8
    transmitter: Node_6789_123456789_123456789_12
    signals:
      - name: Sig_used_twice_efgh_abcdefg_0000
        multiplexer_indicator: Plain
        start_bit: 0
        size: 9
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 4
    name: MSG_CASE_TEST
    size: 8
    transmitter: ~
  - id:
      Standard: 3
    name: msg_case_test
    size: 8
    transmitter: ~
  - id:
      Standard: 2
    name: Msg_with_value_table_sigs
    size: 3
    transmitter: ~
    signals:
      - name: Sig_with_short_val_table
        multiplexer_indicator: Plain
        start_bit: 16
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Sig_with_long_val_table_2
        multiplexer_indicator: Plain
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Sig_with_long_val_table_1
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 1
    name: Msg_Long_Name_56789_1234567_0000
    size: 8
    transmitter: ~
    signals:
      - name: rx_twice_11111111111111111111111
        multiplexer_indicator: Plain
        start_bit: 8
        size: 2
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Sig_used_twice_efgh_abcdefg_0001
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 0
    name: Msg_Long_Name_56789_1234567_0001
    size: 8
    transmitter: ~
    signals:
      - name: rx_twice_short
        multiplexer_indicator: Plain
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Sig_used_twice_efgh_abcdefg_0002
        multiplexer_indicator: Plain
        start_bit: 0
        size: 6
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
message_transmitters:
  - message_id:
      Standard: 6
    transmitter:
      - Node_6789_123456789_123456789_12
      - Sender_2_aaaaaaaaaaaaaaaaaaaaaaa
attribute_definitions:
  - Signal:
      - GenSigSendType
      - Enum:
          - Cyclic
          - OnWrite
          - OnWriteWithRepetition
          - OnChange
          - OnChangeWithRepetition
          - IfActive
          - IfActiveWithRepetition
          - NoSigSendType
  - Signal:
      - GenSigInactiveValue
      - Int:
          - Uint: 0
          - Uint: 0
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 0
  - Message:
      - GenMsgSendType
      - Enum:
          - Cyclic
          - not_used
          - not_used
          - not_used
          - not_used
          - Cyclic
          - not_used
          - IfActive
          - NoMsgSendType
  - Node:
      - NmStationAddress
      - Hex:
          - Uint: 0
          - Uint: 0
  - Plain:
      - DBName
      - String
  - Plain:
      - BusType
      - String
  - Signal:
      - SystemSignalLongSymbol
      - String
  - Message:
      - SystemMessageLongSymbol
      - String
  - Node:
      - SystemNodeLongSymbol
      - String
attribute_defaults:
  - name: GenSigSendType
    value:
      String: Cyclic
  - name: GenSigInactiveValue
    value:
      Uint: 0
  - name: GenMsgCycleTime
    value:
      Uint: 0
  - name: GenMsgSendType
    value:
      String: NoMsgSendType
  - name: NmStationAddress
    value:
      Uint: 0
  - name: DBName
    value:
      String: ""
  - name: BusType
    value:
      String: CAN
  - name: SystemSignalLongSymbol
    value:
      String: ""
  - name: SystemMessageLongSymbol
    value:
      String: ""
  - name: SystemNodeLongSymbol
    value:
      String: ""
attribute_values_database:
  - name: DBName
    value:
      String: long_names_multiple_relations
attribute_values_node:
  - name: SystemNodeLongSymbol
    node_name: Sender_2_aaaaaaaaaaaaaaaaaaaaaaa
    value:
      String: Sender_2_aaaaaaaaaaaaaaaaaaaaaaaAAAAAA
  - name: SystemNodeLongSymbol
    node_name: Receiver_2_zzzzzzzzzzzzzzzzzzzzz
    value:
      String: Receiver_2_zzzzzzzzzzzzzzzzzzzzzZZZ
  - name: SystemNodeLongSymbol
    node_name: Node_6789_123456789_123456789_12
    value:
      String: Node_6789_123456789_123456789_123456789
attribute_values_message:
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 85
    value:
      String: Msg_Long_Name_56789_123456789_123456789_Copy_2
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 1
    value:
      String: Msg_Long_Name_56789_123456789_123456789_Copy_1
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 0
    value:
      String: Msg_Long_Name_56789_123456789_123456789
attribute_values_signal:
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 85
    signal_name: Sig_used_twice_efgh_abcdefghi_ab
    value:
      String: Sig_used_twice_efgh_abcdefghi_abcdefghi_abcdefghi
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 6
    signal_name: rx_twice_long_yyyyyyyyyyyyyyyyyy
    value:
      String: rx_twice_long_yyyyyyyyyyyyyyyyyyYYY
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 5
    signal_name: Sig_used_twice_efgh_abcdefg_0000
    value:
      String: Sig_used_twice_efgh_abcdefghi_abcdefghi_abcdefghi
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 1
    signal_name: Sig_used_twice_efgh_abcdefg_0001
    value:
      String: Sig_used_twice_efgh_abcdefghi_abcdefghi_abcdefghi
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 0
    signal_name: Sig_used_twice_efgh_abcdefg_0002
    value:
      String: Sig_used_twice_efgh_abcdefghi_abcdefghi_abcdefghi
value_descriptions:
  - Signal:
      message_id:
        Standard: 2
      name: Sig_with_short_val_table
      value_descriptions:
        - id: 1
          description: "Very long, long, long description for the value '0x1'"
        - id: 0
          description: "Very long, long, long description for the value '0x0'"
  - Signal:
      message_id:
        Standard: 2
      name: Sig_with_long_val_table_2
      value_descriptions:
        - id: 13
          description: "value '0xD'"
        - id: 12
          description: "Dvalue '0xC'"
        - id: 11
          description: "value '0xB'"
        - id: 10
          description: "value '0xA'"
        - id: 9
          description: "value '0x9'"
        - id: 8
          description: "value '0x8'"
        - id: 7
          description: "value '0x7'"
        - id: 6
          description: "value '0x6'"
        - id: 5
          description: "value '0x5'"
        - id: 4
          description: "value '0x4'"
        - id: 3
          description: "value '0x3'"
        - id: 2
          description: "value '0x2'"
        - id: 1
          description: "value '0x1'"
        - id: 0
          description: "value '0x0'"
  - Signal:
      message_id:
        Standard: 2
      name: Sig_with_long_val_table_1
      value_descriptions:
        - id: 3
          description: "Description for the value '0x3'"
        - id: 2
          description: "Description for the value '0x2'"
        - id: 1
          description: "Description for the value '0x1'"
        - id: 0
          description: "Description for the value '0x0'"
