tests/snapshots/dbc-cantools/message-dlc-zero.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: []
nodes:
  - Node
  - TestNode
messages:
  - id:
      Standard: 1024
    name: Message1
    size: 0
    transmitter: TestNode
