tests/snapshots/dbc-cantools/mod_name_len_dest.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - node_now_short
messages:
  - id:
      Standard: 1
    name: msg_now_short
    size: 8
    transmitter: node_now_short
    signals:
      - name: sig_now_short
        multiplexer_indicator: Plain
        start_bit: 1
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
comments:
  - Node:
      name: node_now_short
      comment: ""
attribute_definitions:
  - Node:
      - SystemNodeLongSymbol
      - String
  - Message:
      - SystemMessageLongSymbol
      - String
  - Signal:
      - SystemSignalLongSymbol
      - String
attribute_defaults:
  - name: SystemNodeLongSymbol
    value:
      String: ""
  - name: SystemMessageLongSymbol
    value:
      String: ""
  - name: SystemSignalLongSymbol
    value:
      String: ""
