tests/snapshots/dbc-cantools/mod_name_len_src.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - Node_will_be_shortened_456789_12
messages:
  - id:
      Standard: 1
    name: Msg_will_be_shortened_3456789_12
    size: 8
    transmitter: Node_will_be_shortened_456789_12
    signals:
      - name: Sig_will_be_shortened_3456789_12
        multiplexer_indicator: Plain
        start_bit: 1
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
comments:
  - Node:
      name: Node_will_be_shortened_456789_12
      comment: ""
attribute_definitions:
  - Node:
      - SystemNodeLongSymbol
      - String
  - Message:
      - SystemMessageLongSymbol
      - String
  - Signal:
      - SystemSignalLongSymbol
      - String
attribute_defaults:
  - name: SystemNodeLongSymbol
    value:
      String: ""
  - name: SystemMessageLongSymbol
    value:
      String: ""
  - name: SystemSignalLongSymbol
    value:
      String: ""
attribute_values_node:
  - name: SystemNodeLongSymbol
    node_name: Node_will_be_shortened_456789_12
    value:
      String: Node_will_be_shortened_456789_12ZZZZ
attribute_values_message:
  - name: SystemMessageLongSymbol
    message_id:
      Standard: 1
    value:
      String: Msg_will_be_shortened_3456789_12YYYY
attribute_values_signal:
  - name: SystemSignalLongSymbol
    message_id:
      Standard: 1
    signal_name: Sig_will_be_shortened_3456789_12
    value:
      String: Sig_will_be_shortened_3456789_12XXXX
